Fix content alignment.

--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -155,7 +155,7 @@ a {
     width: 100%;
     height: 40%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: flex-start;
 }
 
